Section6. Students list in Django.

--- a/StudentsList/visiting.html
+++ b/StudentsList/visiting.html
@@ -48,13 +48,13 @@
             <div class="col-sm-12">
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Студенти</a>
+                        <a class="nav-link" href="#">Студенти</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Відвідування</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="groups_list.html">Групи</a>
+                        <a class="nav-link" href="#">Групи</a>
                     </li>
                 </ul>
             </div>
